	section of lwnetrouter.conf(5).
2016-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Fixed fencepost errors in 'src/lwnetrouterd/protocol_cunc.cpp'.
2016-11-25 Fred Gleason <fredg@paravelsystems.com>
	* Added a LiveWire GPIO protocol driver in
	'src/lwnetrouterd/protocol_gpio.cpp' and
	'src/lwnetrouterd/protocol_gpio.h'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a LiveWire GPIO router in 'src/lwnetrouterd/router_gpio.cpp'
	and 'src/lwnetrouterd/router_gpio.h'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a memory leak in 'src/lwnetrouter/router_gpio.cpp'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a Content Insertion Cue router in
	'src/lwnetrouterd/router_cic.cpp' and 'src/lwnetrouterd/router_cic.h'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added support for serial netcues in
	 'src/lwnetrouter/router_gpio.cpp' and
	 'src/lwnetrouter/router_gpio.h'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'conf/lwnetrouter-sample.conf'.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'Makefile.am' that broke the 'make install' target.
2016-11-26 Fred Gleason <fredg@paravelsystems.com>
	* Added 'xdg/lwnetdelay.desktop'.
	* Enabled the 'make rpm' target.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Changed 'MAX_DELAY' to '60' in 'src/common/config.h'.
	* Fixed a bug in 'src'lwnetrouterd/lwnetrouterd.cpp' that caused
	calculation of delay interval top be incorrect for intervals
	greater than 15 seconds.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Moved the 'DelayChangePercent=' parameter in lwnetrouter.conf(5)
	from the [Audio] to the [Input<n>] section.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Consolidated the [Audio] section parameters of lwnetrouter.conf(5)
	into the [Global] section.
2016-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'LivewireIpAddress=' parameter to the [Global] section
	of lwnetrouter.conf(5).