@@ -17,48 +17,56 @@ InputBusXfers=No
 OutputBusXfers=Yes
 
 [Input1]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1000
 SourceIpAddress1=192.168.21.80
 SourceIpAddress2=192.168.21.90
 
 [Input2]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1001
 SourceIpAddress1=192.168.21.81
 SourceIpAddress2=192.168.21.91
 
 [Input3]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1002
 SourceIpAddress1=192.168.21.82
 SourceIpAddress2=192.168.21.92
 
 [Input4]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1003
 SourceIpAddress1=192.168.21.83
 SourceIpAddress2=192.168.21.93
 
 [Input5]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1004
 SourceIpAddress1=192.168.21.84
 SourceIpAddress2=192.168.21.94
 
 [Input6]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1005
 SourceIpAddress1=192.168.21.85
 SourceIpAddress2=192.168.21.95
 
 [Input7]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1006
 SourceIpAddress1=192.168.21.86
 SourceIpAddress2=192.168.21.96
 
 [Input8]
+FullDelay=10
 DelayChangePercent=5
 DelayControlSource=1007
 SourceIpAddress1=192.168.21.87
